docs-archive/apache-airflow-providers-amazon/9.28.0/_sources/_api/airflow/providers/amazon/aws/operators/mwaa_serverless/index.rst.txt
airflow.providers.amazon.aws.operators.mwaa_serverless
======================================================

.. py:module:: airflow.providers.amazon.aws.operators.mwaa_serverless

.. autoapi-nested-parse::

   Amazon MWAA Serverless operators.



Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.operators.mwaa_serverless.MwaaServerlessStartWorkflowRunOperator
   airflow.providers.amazon.aws.operators.mwaa_serverless.MwaaServerlessCreateWorkflowOperator


Module Contents
---------------

.. py:class:: MwaaServerlessStartWorkflowRunOperator(*, workflow_arn, override_parameters = None, workflow_version = None, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`\ ]


   Start a new execution of an Amazon MWAA Serverless workflow.

   This operator triggers a workflow run that executes the tasks defined in the
   workflow. MWAA Serverless handles task scheduling, worker scaling, dependency
   resolution, and monitoring.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:MwaaServerlessStartWorkflowRunOperator`

   :param workflow_arn: The ARN of the workflow to run. (templated)
   :param override_parameters: Optional parameters to override defaults for this run. (templated)
   :param workflow_version: Optional version of the workflow to execute. (templated)


   .. py:attribute:: template_fields
      :type:  tuple[str, Ellipsis]


   .. py:attribute:: template_fields_renderers


   .. py:attribute:: aws_hook_class


   .. py:attribute:: workflow_arn


   .. py:attribute:: override_parameters
      :value: None



   .. py:attribute:: workflow_version
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: MwaaServerlessCreateWorkflowOperator(*, workflow_name, definition_s3_location, role_arn, description = None, tags = None, if_exists = 'skip', **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`\ ]


   Create an Amazon MWAA Serverless workflow.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:MwaaServerlessCreateWorkflowOperator`

   :param workflow_name: The name of the workflow. (templated)
   :param definition_s3_location: Dict with ``Bucket`` and ``ObjectKey`` for the YAML definition. (templated)
   :param role_arn: The execution role ARN. (templated)
   :param description: Optional description. (templated)
   :param tags: Optional tags dict.
   :param if_exists: Behavior when the workflow already exists.
       ``"fail"`` raises an error, ``"skip"`` returns the existing ARN.


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  tuple[str, Ellipsis]


   .. py:attribute:: template_fields_renderers


   .. py:attribute:: workflow_name


   .. py:attribute:: definition_s3_location


   .. py:attribute:: role_arn


   .. py:attribute:: description
      :value: None



   .. py:attribute:: tags
      :value: None



   .. py:attribute:: if_exists
      :value: 'skip'



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



